--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -14,7 +14,7 @@ jobs:
         run: |
           npm i lix
           npx lix download
-          npx lix lime build html5 -minify
+          npx run build
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.0.0
