ci: fix issue with incorrect gh action config

--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -14,7 +14,7 @@ jobs:
         run: |
           npm i lix
           npx lix download
-          npx run build
+          npx lix lime build html5 -minify
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.0.0
