--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/Main.hx",
   "scripts": {
     "start": "lix lime build html5 -minify",
-    "dev": "concurrently --hide \"comp-server\" \"npm run watch\" \"npm run server\" \"npm run comp-server\"",
+    "dev": "concurrently --hide \"1,2\" \"npm run watch\" \"npm run server\" \"npm run comp-server\"",
     "watch": "watchman-make -p 'src/**/*.hx' -r 'sh watcher.sh'",
     "server": "http-server export/html5/bin --port 1212 -c-1",
     "comp-server": "haxe -v --wait 8000"
